--- a/ChickenSoftware.StockAnalyzer.Solution/ChickenSoftware.StockAnalyzer.Bot/packages.config
+++ b/ChickenSoftware.StockAnalyzer.Solution/ChickenSoftware.StockAnalyzer.Bot/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Accord" version="3.0.2" targetFramework="net46" />
+  <package id="Accord.Math" version="3.0.2" targetFramework="net46" />
   <package id="Autofac" version="3.5.2" targetFramework="net46" />
+  <package id="FSharp.Data" version="2.3.0" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
