--- a/ChickenSoftware.StockAnalyzer.Solution/ChickenSoftware.StockAnalyzer/ChickenSoftware.StockAnalyzer.fsproj
+++ b/ChickenSoftware.StockAnalyzer.Solution/ChickenSoftware.StockAnalyzer/ChickenSoftware.StockAnalyzer.fsproj
@@ -53,7 +53,7 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="Library1.fs" />
+    <Compile Include="StockAnalyser.fs" />
     <None Include="Script.fsx" />
     <Content Include="packages.config" />
   </ItemGroup>
@@ -84,7 +84,10 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Numerics" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <Import Project="..\packages\Accord.3.0.2\build\Accord.targets" Condition="Exists('..\packages\Accord.3.0.2\build\Accord.targets')" />
