--- a/ChickenSoftware.StockAnalyzer.Solution/ChickenSoftware.StockAnalyzer/ChickenSoftware.StockAnalyzer.fsproj
+++ b/ChickenSoftware.StockAnalyzer.Solution/ChickenSoftware.StockAnalyzer/ChickenSoftware.StockAnalyzer.fsproj
@@ -53,7 +53,7 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="StockAnalyser.fs" />
+    <Compile Include="StockAnalyzer.fs" />
     <None Include="Script.fsx" />
     <Content Include="packages.config" />
   </ItemGroup>
