--- a/ChickenSoftware.StockAnalyzer.Solution/ChickenSoftware.StockAnalyzer/ChickenSoftware.StockAnalyzer.fsproj
+++ b/ChickenSoftware.StockAnalyzer.Solution/ChickenSoftware.StockAnalyzer/ChickenSoftware.StockAnalyzer.fsproj
@@ -9,12 +9,13 @@
     <OutputType>Library</OutputType>
     <RootNamespace>ChickenSoftware.StockAnalyzer</RootNamespace>
     <AssemblyName>ChickenSoftware.StockAnalyzer</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
-    <TargetFSharpCoreVersion>4.4.0.0</TargetFSharpCoreVersion>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFSharpCoreVersion>4.3.0.0</TargetFSharpCoreVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Name>ChickenSoftware.StockAnalyzer</Name>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
